# Quant-Strat

./: .gitignore  README.md
Deep_Learning/optionPricing/: CMakeLists.txt  build.ps1  build.sh  main.cpp
Deep_Learning/optionPricing/modules/: activationFunction.cpp  mlp.cpp  perceptron.cpp
Deep_Learning/optionPricing/modules/include/: activationFunction.hpp  mlp.hpp  perceptron.hpp
Machine_Learning/: XGboost.ipynb
Statistics/: pairsTrading.ipynb
Statistics/Black-Scholes/: optionPricing.cpp
Statistics/MonteCarlo/: optionPricing.cpp  portfolioReturns.ipynb
